[package]
name = "rgs"
version = "1.0.7"
authors = ["Nikola Tasic <ntasic7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
colored = "2.0.0"
git2 = "0.13.23"
threadpool = "1.8.1"
num_cpus = "1.13.0"
savefile = "0.8.1"
savefile-derive = "0.8.1"
structopt = "0.3.22"
serde = "1.0.126"
serde_derive = "1.0.126"
toml = "0.5.8"
chrono = "0.4.19"
notify-rust = "4.5.2"

[profile.release]
opt-level=3
debug=false
debug-assertions=false
overflow-checks=false
lto=false
incremental=false
panic="abort"
